# AutonomousDataOps-v1

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_local.bat  run_local.sh  run_tests.bat  run_tests.sh
.github/workflows/: build_wheel.yml  ci.yml
agents/: codegen_agent.py  data_processing_agent.py  data_quality_agent.py  insight_agent.py  llm_adapter.py  planner_agent.py
api/: main.py  schemas.py
autodops/: __init__.py  cli.py
deploy/prometheus/: prometheus.yml
example_data/: sample.csv
examples/: run_demo.py  sample_data.cleaned.csv  sample_data.csv
memory/: sql_memory.py  vector_store.py
pipelines/: etl_pipeline.py  orchestrator.py
scripts/: publish.ps1
sql/migrations/: 001_init.sql
tests/: test_agents.py  test_api_security.py  test_cli.py  test_external_api.py  test_integration_pipeline_llm.py  test_llm_behavior.py  test_llm_validator.py  test_pipeline.py
tools/: db.py  executor.py  external_api.py  file_io.py  llm_validator.py  security.py
utils/: logging_config.py  observability.py
