[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autodops"
version = "0.1.0"
description = "Autonomous DataOps Multi-Agent System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.95.2",
    "uvicorn[standard]==0.22.0",
    "pandas==2.2.3",
    "sqlalchemy==2.0.20",
    "duckdb==1.5.2",
    "langchain==0.0.307",
    "python-multipart==0.0.6",
    "httpx==0.24.1",
    "jinja2==3.1.2",
    "python-dotenv==1.0.0",
    "scipy==1.11.3",
    "pytest==7.4.0",
    "pytest-cov==4.1.0",
    "opentelemetry-api==1.14.0",
    "opentelemetry-sdk==1.14.0",
    "opentelemetry-instrumentation-fastapi==0.39b0",
    "prometheus-client==0.16.0",
    "jsonschema==4.21.1",
    "cachetools==5.3.0",
    "redis==4.8.2",
    "fakeredis==2.21.0",
]

optional-dependencies = { ml = ["faiss-cpu>=1.7.4", "sentence-transformers>=2.2.2"] }

[project.scripts]
autodops = "autodops.cli:main"

[project.scripts]
autodops = "autodops.cli:main"
